--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,18 +1,27 @@
 @font-face {
   font-family: "Farmacoop";
+  src: url(../fonts/CircularStd-Light.ttf);
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Farmacoop";
   src: url(../fonts/CircularStd-Book_0.otf);
-  font-weight: 400; }
+  font-weight: 400;
+}
 @font-face {
   font-family: "Farmacoop";
   src: url(../fonts/CircularStd-Medium_0.otf);
-  font-weight: 500; }
+  font-weight: 500;
+}
 @font-face {
   font-family: "Farmacoop";
   src: url(../fonts/CircularStd-Bold_0.otf);
-  font-weight: 700; }
+  font-weight: 700;
+}
 @font-face {
   font-family: "Farmacoop";
   src: url(../fonts/CircularStd-Black_0.otf);
-  font-weight: 800; }
+  font-weight: 800;
+}
 
 /*# sourceMappingURL=fonts.css.map */
