--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,5 +1,11 @@
 @font-face {
   font-family: "Farmacoop";
+  src: url(../fonts/CircularStd-Light.ttf);
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Farmacoop";
   src: url(../fonts/CircularStd-Book_0.otf);
   font-weight: 400;
 }
